code/src/demo-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api
  namespace: demo
  labels:
    app: demo-api
spec:
  selector:
    app: demo-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
